vlib/v/checker/tests/var_option_wrong_type.vv
var_none := ?f64(none)

var3 := var_none or { var_none + 'foo' }
println(var3)
